# Autonomous-pathfinder

./: CMakeLists.txt  README.md  package.xml
launch/: navigate_to_goal.launch
src/: navigator.cpp  node_controller.cpp  node_distance_logger.cpp  node_watchdog.cpp  path_planner.cpp
